syntax = "proto3";

option csharp_namespace = "USP.Grpc.Secrets";

package usp.secrets;

// Secrets management service
service SecretsService {
  // Read a secret
  rpc ReadSecret(ReadSecretRequest) returns (ReadSecretResponse);

  // Write a secret
  rpc WriteSecret(WriteSecretRequest) returns (WriteSecretResponse);

  // Delete a secret
  rpc DeleteSecret(DeleteSecretRequest) returns (DeleteSecretResponse);

  // List secrets
  rpc ListSecrets(ListSecretsRequest) returns (ListSecretsResponse);

  // Encrypt data using Transit engine
  rpc Encrypt(EncryptRequest) returns (EncryptResponse);

  // Decrypt data using Transit engine
  rpc Decrypt(DecryptRequest) returns (DecryptResponse);

  // Rotate secret
  rpc RotateSecret(RotateSecretRequest) returns (RotateSecretResponse);

  // Get secret metadata
  rpc GetSecretMetadata(GetSecretMetadataRequest) returns (GetSecretMetadataResponse);
}

// Read secret request
message ReadSecretRequest {
  string path = 1;
  int32 version = 2;
  string namespace = 3;
}

// Read secret response
message ReadSecretResponse {
  map<string, string> data = 1;
  SecretMetadata metadata = 2;
  string error_message = 3;
}

// Write secret request
message WriteSecretRequest {
  string path = 1;
  map<string, string> data = 2;
  string namespace = 3;
  bool create_only = 4;
}

// Write secret response
message WriteSecretResponse {
  bool success = 1;
  int32 version = 2;
  string created_time = 3;
  string error_message = 4;
}

// Delete secret request
message DeleteSecretRequest {
  string path = 1;
  repeated int32 versions = 2;
  string namespace = 3;
}

// Delete secret response
message DeleteSecretResponse {
  bool success = 1;
  string message = 2;
}

// List secrets request
message ListSecretsRequest {
  string path = 1;
  string namespace = 2;
}

// List secrets response
message ListSecretsResponse {
  repeated string keys = 1;
}

// Encrypt request
message EncryptRequest {
  string key_name = 1;
  bytes plaintext = 2;
  string context = 3;
  string namespace = 4;
}

// Encrypt response
message EncryptResponse {
  string ciphertext = 1;
  string key_version = 2;
  string error_message = 3;
}

// Decrypt request
message DecryptRequest {
  string key_name = 1;
  string ciphertext = 2;
  string context = 3;
  string namespace = 4;
}

// Decrypt response
message DecryptResponse {
  bytes plaintext = 1;
  string key_version = 2;
  string error_message = 3;
}

// Rotate secret request
message RotateSecretRequest {
  string path = 1;
  string namespace = 2;
}

// Rotate secret response
message RotateSecretResponse {
  bool success = 1;
  int32 new_version = 2;
  string message = 3;
}

// Get secret metadata request
message GetSecretMetadataRequest {
  string path = 1;
  string namespace = 2;
}

// Secret metadata
message SecretMetadata {
  int32 current_version = 1;
  int32 oldest_version = 2;
  string created_time = 3;
  string updated_time = 4;
  map<string, VersionMetadata> versions = 5;
  bool delete_version_after = 6;
  int32 max_versions = 7;
}

// Version metadata
message VersionMetadata {
  string created_time = 1;
  string deletion_time = 2;
  bool destroyed = 3;
}

// Get secret metadata response
message GetSecretMetadataResponse {
  SecretMetadata metadata = 1;
  string error_message = 2;
}
